# spacy-setfit

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
spacy_setfit/: __init__.py  models.py  schemas.py
tests/: conftest.py  test_pipeline.py
